fix z-index

--- a/style.css
+++ b/style.css
@@ -4,40 +4,40 @@
 
 @layer components {
   .tooltip {
-    @apply hidden group-hover:block absolute  min-w-max  text-xs bg-black text-white px-2 py-1 rounded -bottom-8
+    @apply hidden z-10 group-hover:block absolute  min-w-max  text-xs bg-black text-white px-2 py-1 rounded -bottom-8;
   }
   .subtip {
-    @apply hidden z-50 group-hover/sub:block absolute  min-w-max  text-xs bg-black text-white px-2 py-1 rounded -bottom-8
+    @apply hidden z-50 group-hover/sub:block absolute  min-w-max  text-xs bg-black text-white px-2 py-1 rounded -bottom-8;
   }
 
   .menu {
-    @apply absolute left-0 bg-white w-80  shadow-[0_0_7px_0_rgba(0,0,0,0.2)] text-black flex flex-col  z-50
+    @apply absolute left-0 bg-white w-80  shadow-[0_0_7px_0_rgba(0,0,0,0.2)] text-black flex flex-col  z-50;
   }
   .menu-item {
-    @apply flex justify-between items-center gap-3 px-4 py-0.5 xl:py-1 2xl:py-2 hover:bg-[rgba(0,0,0,0.04)]  relative cursor-pointer flex-shrink-0
+    @apply flex justify-between items-center gap-3 px-4 py-0.5 xl:py-1 2xl:py-2 hover:bg-[rgba(0,0,0,0.04)]  relative cursor-pointer flex-shrink-0;
   }
   .icon-size {
-    @apply xl:w-4 xl:h-4 w-3 h-3
+    @apply xl:w-4 xl:h-4 w-3 h-3;
   }
   .i-size {
-    @apply text-xs xl:text-[15px]
+    @apply text-xs xl:text-[15px];
   }
   .sect {
-    @apply flex flex-col py-2
+    @apply flex flex-col py-2;
   }
   .icons {
-    @apply relative hover:bg-[#e0e5eb] py-1.5 px-1 xl:px-1.5 2xl:px-2 cursor-pointer flex-shrink-0
+    @apply relative hover:bg-[#e0e5eb] py-1.5 px-1 xl:px-1.5 2xl:px-2 cursor-pointer flex-shrink-0;
   }
-  .colordot{
-    @apply h-[22px] w-[22px] rounded-full border border-gray-300 cursor-pointer
+  .colordot {
+    @apply h-[22px] w-[22px] rounded-full border border-gray-300 cursor-pointer;
   }
   .hcell {
-    @apply w-[100px] h-[25px] border-y border-r border-[#c7c7c7] text-center flex-shrink-0 flex items-center justify-center bg-white
+    @apply w-[100px] h-[25px] border-y border-r border-[#c7c7c7] text-center flex-shrink-0 flex items-center justify-center bg-white;
   }
   .ncell {
-    @apply w-[47px] h-[25px] border-x border-b border-[#c7c7c7] flex-shrink-0 text-center flex items-center justify-center bg-white
+    @apply w-[47px] h-[25px] border-x border-b border-[#c7c7c7] flex-shrink-0 text-center flex items-center justify-center bg-white;
   }
   .cell {
-    @apply w-[100px] h-[25px] border-b border-r border-[#e0e0e0]  flex-shrink-0 flex items-center p-2  focus:border-[#1a73e8] focus:outline-0 focus:border-2  
+    @apply w-[100px] h-[25px] border-b border-r border-[#e0e0e0]  flex-shrink-0 flex items-center p-2  focus:border-[#1a73e8] focus:outline-0 focus:border-2;
   }
 }
